# jax-ensemble

./: .gitignore  LICENSE  README.md  pyproject.toml
conf/: config.yaml
conf/plots/: styles.yaml
experiments/train_ensemble/: run.py
experiments/train_mlp/: run.py
jax_ensemble/: ensemble.py  mlp.py  utils.py
